--- a/Chapter 3 -  Built-in Data Structures, Functions, and Files.ipynb
+++ b/Chapter 3 -  Built-in Data Structures, Functions, and Files.ipynb
@@ -219,11 +219,78 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h4> Currying a function </h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def adding_number(x, y):\n",
+    "    return x+y\n",
+    "add_five = lambda y: adding_number(5, y)\n",
+    "from functools import partial\n",
+    "#add_five = partial(adding_number, 5)\n",
+    "add_five(66)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> Working with generator </h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating squares 1 to 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def square(n=10):\n",
+    "    print(\"Generating squares 1 to 10\".format(n ** 2))\n",
+    "    for i in range(1, n+1):\n",
+    "        yield i ** 2\n",
+    "gen = square()\n",
+    "list(gen)\n",
+    "# Alternative way\n",
+    "# gen = (x ** 2 for x in range(10))\n",
+    "# print(list(gen), end=' ')"
+   ]
   }
  ],
  "metadata": {
