Boolean Indexing Completed

--- a/NumPy Basics -  Arrays and Vectorized Computation.ipynb
+++ b/NumPy Basics -  Arrays and Vectorized Computation.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 26.6 ms, sys: 0 ns, total: 26.6 ms\n",
-      "Wall time: 26.3 ms\n"
+      "CPU times: user 27.9 ms, sys: 12 ms, total: 39.9 ms\n",
+      "Wall time: 46 ms\n"
      ]
     }
    ],
@@ -80,6 +80,58 @@
     "arr.shape\n",
     "arr.ndim\n",
     "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> Boolean Indexing </h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.28471886  0.33824448  1.09632199 -1.18886331]\n",
+      " [-0.68002506 -1.1751691  -1.35315816  0.85543846]\n",
+      " [-0.6097765   0.07136144 -0.78144932  1.10607427]\n",
+      " [ 1.07209761  0.55628288 -1.63269828  1.06017611]\n",
+      " [ 0.09621653 -1.87772298 -1.56014794 -1.89692166]\n",
+      " [-1.23523306  2.39503674  1.08830373 -0.15300371]\n",
+      " [ 1.71788219 -1.95497526 -1.0294092   1.25858656]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.6097765 ,  0.07136144, -0.78144932,  1.10607427],\n",
+       "       [ 0.09621653, -1.87772298, -1.56014794, -1.89692166]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = np.random.randn(7,4)\n",
+    "names = np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])\n",
+    "\n",
+    "# It will set all the negative values in ndarray to 0\n",
+    "#num[num<0] = 0\n",
+    "cond = names == 'Bob'\n",
+    "print(num)\n",
+    "\n",
+    "# To invert to result\n",
+    "num[~cond]\n",
+    "mask = (names == 'Bob') | (names == 'Joe')\n",
+    "num[mask]\n"
    ]
   }
  ],
