Fancy Indexing Complete

--- a/NumPy Basics -  Arrays and Vectorized Computation.ipynb
+++ b/NumPy Basics -  Arrays and Vectorized Computation.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 27.9 ms, sys: 12 ms, total: 39.9 ms\n",
-      "Wall time: 46 ms\n"
+      "CPU times: user 20.9 ms, sys: 15.9 ms, total: 36.8 ms\n",
+      "Wall time: 46.8 ms\n"
      ]
     }
    ],
@@ -91,30 +91,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.28471886  0.33824448  1.09632199 -1.18886331]\n",
-      " [-0.68002506 -1.1751691  -1.35315816  0.85543846]\n",
-      " [-0.6097765   0.07136144 -0.78144932  1.10607427]\n",
-      " [ 1.07209761  0.55628288 -1.63269828  1.06017611]\n",
-      " [ 0.09621653 -1.87772298 -1.56014794 -1.89692166]\n",
-      " [-1.23523306  2.39503674  1.08830373 -0.15300371]\n",
-      " [ 1.71788219 -1.95497526 -1.0294092   1.25858656]]\n"
+      "[[ 1.43557627 -1.09817543  0.44046755  0.80495663]\n",
+      " [ 1.27697874  0.34878352 -0.71136721 -0.01593855]\n",
+      " [-0.30354192 -0.4135478   1.99067563 -1.48751501]\n",
+      " [ 0.79042721  0.84611955  0.5685947  -2.33133782]\n",
+      " [-0.24870595  0.57038387 -0.91614404 -3.14150912]\n",
+      " [-0.03208382 -0.09524793 -0.24864763  0.23836339]\n",
+      " [ 0.43595555  0.57279476 -0.59901348  0.19222599]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[-0.6097765 ,  0.07136144, -0.78144932,  1.10607427],\n",
-       "       [ 0.09621653, -1.87772298, -1.56014794, -1.89692166]])"
+       "array([[ 8.        ,  8.        ,  8.        ,  8.        ],\n",
+       "       [ 1.27697874,  0.34878352, -0.71136721, -0.01593855],\n",
+       "       [ 8.        ,  8.        ,  8.        ,  8.        ],\n",
+       "       [-0.03208382, -0.09524793, -0.24864763,  0.23836339],\n",
+       "       [ 0.43595555,  0.57279476, -0.59901348,  0.19222599]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,8 +133,78 @@
     "\n",
     "# To invert to result\n",
     "num[~cond]\n",
+    "\n",
+    "# Unary Operator\n",
     "mask = (names == 'Bob') | (names == 'Joe')\n",
-    "num[mask]\n"
+    "\n",
+    "num[names != 'Joe'] = 8\n",
+    "num[mask]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> Fancy Indexing </h4>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4. 4. 4.]\n",
+      " [7. 7. 7.]\n",
+      " [2. 2. 2.]]\n",
+      "\n",
+      "We can use negative sign to select the values from the end\n",
+      "[[3. 3. 3.]\n",
+      " [6. 6. 6.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.empty((8,3))\n",
+    "arr\n",
+    "\n",
+    "for i in range(8):\n",
+    "    arr[i]=i\n",
+    "print(arr[[4,7,2]])\n",
+    "\n",
+    "print(\"\\nWe can use negative sign to select the values from the end\")\n",
+    "print(arr[[-5, -2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23],\n",
+       "       [24, 25, 26, 27],\n",
+       "       [28, 29, 30, 31]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.arange(32).reshape((8,4))\n",
+    "arr1"
    ]
   }
  ],
