Start Array-Oriented Programming

--- a/NumPy Basics -  Arrays and Vectorized Computation.ipynb
+++ b/NumPy Basics -  Arrays and Vectorized Computation.ipynb
@@ -380,6 +380,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><h4> Unary Functions Table </h4></center>\n",
+    "<img src=\"image/1.png\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -416,6 +424,14 @@
     "\n",
     "np.maximum(x,y)\n",
     "# Here numpy maximum function computes the max value element-wise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><h4>Binary Functions Table</h4></center>\n",
+    "<img src=\"image/2.png\">"
    ]
   },
   {
@@ -472,17 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h4> Unary Functions Table </h4></center>\n",
-    "<img src=\"image/1.png\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "<center"
+    "<h4> Array-Oriented Programming with Arrays </h4>"
    ]
   }
  ],
